--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "date-fns": "1.30.1",
     "graphql": "^14.7.0",
     "normalize.css": "8.0.1",
+    "prettier": "^2.1.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-markdown": "4.2.2",
@@ -51,7 +52,6 @@
     "eslint-plugin-react-hooks": "2.3.0",
     "graphql-request": "^1.8.2",
     "parcel-bundler": "1.12.4",
-    "prettier": "1.19.1",
     "test-data-bot": "0.8.0"
   }
 }
